# bakflow

./: .gitignore  .kiroignore  README.md  ROADMAP.md  conftest.py  pyproject.toml
.kiro/steering/: product.md  structure.md  tech.md
.serena/: project.yml
.serena/memories/: project_overview.md  style_and_conventions.md  suggested_commands.md  task_completion_checklist.md
scripts/: create_bare_csv.py  import_tree_data_comparison.py
src/: __init__.py  cli.py  config.py  export.py  test_integration_wavefront.py
src/classifier/: __init__.py  batch.py  ollama_provider.py  openai_provider.py  prompts.py  provider.py  test_classification_submission.py  test_classifier_output.py  test_confidence_threshold.py  test_prompts.py  test_provider.py  test_wavefront.py  wavefront.py
src/db/: __init__.py  models.py  repository.py  schema.py  status.py  test_audit_log.py  test_cross_dimension_guards.py  test_drive_lookup.py  test_drive_registration.py  test_models.py  test_path_normalization.py  test_persistence_roundtrip.py  test_repository.py  test_repository_wavefront.py  test_schema.py  test_status.py
src/importer/: __init__.py  csv_importer.py  test_csv_import_roundtrip.py  test_csv_malformed_rows.py  test_csv_tree_metadata.py
src/mcp_server/: __init__.py  server.py  test_cascade.py  test_decision_manifest.py  test_decision_recording.py  test_folder_summary.py  test_integration.py  test_parameter_validation.py  test_progress.py  test_review_queue.py  test_server.py  test_unclassified_batch.py
src/scripts/: migrate_extensions.py  migrate_paths.py  test_live_classify.py
(+28 files in other folders)
