[project]
name = "bakflow"
version = "0.1.0"
description = "AI-assisted backup workflow tool"
requires-python = ">=3.14"
dependencies = [
    "pydantic>=2.0",
    "mcp>=1.0",
    "streamlit>=1.30",
    "httpx>=0.25",
    "ollama>=0.3",
    "openai>=1.0",
]

[project.optional-dependencies]
dev = [
    "hypothesis>=6.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
bakflow = "src.cli:main"

[tool.setuptools.packages.find]
include = ["src*"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
